# Persona-RAG

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
demo/: index.html
docs/: ARCHITECTURE.md  AUTH-FLOW.md  CONFIGURATION.md  DATA-PIPELINE.md  EVAL.md  IMPLEMENTATION-PLAN.md  INSIGHTS.md  OBSERVABILITY.md  PROMPT-DESIGN.md  ci-template.yml
docs/diagrams/: auth-flow.mmd  c4-container.mmd  ingest.mmd  insights.mmd  langgraph-state.mmd  runtime.mmd  system.mmd
docs/finetune/: README.md
docs/portfolio/: 2026-06-02-rag-vs-finetune-persona-voice.md
docs/runtime/: REQUEST-PIPELINE.md  RETRIEVAL-AND-GENERATION.md
docs/superpowers/: 2026-06-02-SESSION-REVIEW.md  2026-06-02-arm-a-findings.md  2026-06-02-arm-a-plan.md  2026-06-02-comparison-findings.md  2026-06-02-eval-architecture-audit.md  2026-06-02-turing-test-design.md
models/: Modelfile
notebooks/: base_qwen_endpoint.ipynb  finetune_persona_colab.ipynb
persona_rag/: _logging.py  config.py  models.py
persona_rag/bot/: auth.py  debug_trace.py  main.py  rate_limit.py  states.py
persona_rag/db/: engine.py  models.py
persona_rag/eval/: authorship.py  authorship_detect.py  compare.py  distribution.py  effect_size.py  grounding.py  mlflow_wrap.py  stylometry.py
persona_rag/finetune/: dataset.py
persona_rag/generate/: bubbles.py  fact_router.py  guardrails.py  lang_detect.py  llm_client.py  ollama_health.py  persona.py  prompt.py  register.py  select.py
persona_rag/graph/: compile.py  state.py
persona_rag/index/: bm25_store.py  embedder.py  keys.py  qdrant_store.py
persona_rag/ingest/: conversation.py  instagram_parser.py  normalize.py  pii.py  pipeline.py  stylometry.py  telegram_parser.py  turns.py
persona_rag/insights/: algo.py  blocklists.py  consolidator.py  extractor.py  onboarding.py  onboarding_questions.yaml  persistence.py  persona_description.py  recency.py  router.py  sessions.py  synonyms.yaml  vault.py  verification.py  verifier.py
persona_rag/memory/: store.py  updater.py
persona_rag/retrieval/: __init__.py  bm25.py  dense.py  hybrid.py  mmr.py  rerank.py
persona_rag/shadow/: logger.py
report/: README.md  build.sh  refs.bib  report.typ
report/diagrams/: d1_architecture.typ  d2_split_leak.typ  d3_two_arm.typ  d4_train_serve.typ
report/parts/: appendix.typ  ethics.typ  part0_intro.typ  part1.typ  part2.typ  (+4 more)
scripts/: _brainstorm_cluster_probe.py  _brainstorm_cluster_probe2.py  _brainstorm_cluster_probe3.py  _brainstorm_entity_probe.py  authorship_validation.py  base_qwen_arm.py  build_colab_notebook.py  build_human_eval.py  build_turing_eval.py  capture_demo_pairs.py  compare_persona.py  compare_persona_armA.py  compute_effect_sizes.py  demo_tone.py  distill_insights.py  eval_persona.py  export_finetune_data.py  ingest.py  ingest_vault.py  init_data.py  length_cap_baseline.py  plot_comparison.py  plot_eval.py  plot_report.py  probe_grounding.py  probe_retrieval.py  recompute_grounding_ci.py  redecode_robustness.py  reindex.py  score_by_language.py  score_human_eval.py  score_turing_eval.py  stress_test_persona.py  whitelist_admin.py
streamlit_app/: main.py
tests/: conftest.py  test_bot_admin.py  test_bot_auth.py  test_bot_main.py  test_bot_rate_limit.py  test_colab_notebook_in_sync.py  test_config.py  test_db_models.py  test_eval_armA.py  test_eval_authorship.py  test_eval_compare.py  test_eval_distribution.py  test_eval_effect_size.py  test_eval_mlflow_wrap.py  test_eval_pairs_csv.py  test_eval_stylometry.py  test_finetune_dataset.py  test_generate_bubbles.py  test_generate_decoding.py  test_generate_guardrails.py  test_generate_prompt.py  test_generate_register.py  test_generate_register_prompt.py  test_generate_thin_prompt.py  test_graph_e2e.py  test_graph_memory_throttle.py  test_graph_session.py  test_index_bm25.py  test_index_embedder.py  test_index_keys.py  test_index_qdrant.py  test_ingest_conversation.py  test_ingest_instagram.py  test_ingest_normalize.py  test_ingest_pii.py  test_ingest_pipeline.py  test_ingest_stylometry.py  test_ingest_telegram.py  test_ingest_turns.py  test_llm_backend.py  (+10 more)
(+55 files in other folders)
