[project]
name = "persona-rag"
version = "0.0.1"
description = "Telegram bot that replies as Bohdan, grounded in past chats via retrieval."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.4",
    "openai>=1.40",
    "lancedb>=0.10",
    "pyarrow>=15",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "tenacity>=8.5",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["persona_rag"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
